--- a/source/form.html
+++ b/source/form.html
@@ -9,17 +9,17 @@
 </head>
 
 <body class="page__body">
-  <header class="page-header">
+  <header class="page-header page-header--border">
     <div class="page-header__main-wrapper">
-      <a href="index.html" class="page-header__logo">
+      <a href="index.html" class="page-header__logo page-header__logo-icon">
         <img src="img/logo/logo-mobile.svg" width="33" height="38" alt="Логотип Cat Energy">
       </a>
 
-      <a href="index.html" class="page-header__logo">
+      <a href="index.html" class="page-header__logo page-header__logo-title">
         <img src="img/logo/logo-cat-energy.svg" width="101" height="18" alt="Cat Energy">
       </a>
 
-      <nav class="main-nav">
+      <nav class="main-nav main-nav--closed main-nav--nojs">
         <button class="main-nav__toggle" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
@@ -27,7 +27,7 @@
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
             <li class="site-list__item">
-              <a href="index.html" class="site-list__link">Главная</a>
+              <a href="index.html" class="site-list__link site-list__link--first">Главная</a>
             </li>
             <li class="site-list__item">
               <a href="catalog.html" class="site-list__link">Каталог продукции</a>
@@ -42,125 +42,159 @@
   </header>
 
   <main class="page-main">
-    <div class="page-main__wrapper main-form__wrapper">
-      <h1 class="page-heading">Подбор программы</h1>
+    <form class="main-form" method="get" action="https://echo.htmlacademy.ru">
+      <div class="main-form__wrapper">
+        <h1 class="page-heading main-form__title">Подбор программы</h1>
 
-      <p class="page-main__description">Заполните анкету, и мы подберем программу питания для вашего
-        кота</p>
+        <p class="main-form__description">Заполните анкету, и мы подберем<br> программу питания для вашего
+          кота</p>
+      </div>
 
-      <form class="main-form" method="get" action="https://echo.htmlacademy.ru">
-        <div class="main-form__inner">
-          <fieldset class="main-form__fieldset">
-            <legend class="visually-hidden">Основная информация (о коте)</legend>
-
-            <ul class="main-form__list">
-              <li class="main-form__item main-form__item--reversed">
-                <input class="main-form__input" type="text" name="cat-name" id="cat-name" required>
-                <label class="main-form__label" for="cat-name">Имя:*</label>
-              </li>
-
-              <li class="main-form__item main-form__item--reversed">
-                <input class="main-form__input" type="number" name="cat-weight" id="cat-weight" required>
-                <label class="main-form__label" for="cat-weight">Вес (кг):*</label>
-              </li>
-
-              <li class="main-form__item main-form__item--reversed">
-                <input class="main-form__input" type="number" name="cat-age" id="cat-age">
-                <label class="main-form__label" for="cat-age">Возраст (лет):</label>
-              </li>
-            </ul>
-          </fieldset>
-
-          <fieldset class="main-form__fieldset main-form__fieldset--border">
-            <legend class="visually-hidden">Цель</legend>
-
-            <ul class="main-form__list">
-              <li class="main-form__item">
-                <input class="main-form__input" type="radio" name="weight" value="lose-weight" id="lose-weight" checked>
-                <label class="main-form__label main-form__label--darken" for="lose-weight">Похудение</label>
-              </li>
-
-              <li class="main-form__item">
-                <input class="main-form__input" type="radio" name="weight" value="weight-gain" id="weight-gain">
-                <label class="main-form__label main-form__label--darken" for="weight-gain">Набор массы</label>
-              </li>
-
-              <li class="main-form__item">
-                <input class="main-form__input" type="radio" name="weight" value="consult" id="consult">
-                <label class="main-form__label main-form__label--darken" for="consult">Не знаю (нужен ваш совет)</label>
-              </li>
-            </ul>
-          </fieldset>
-        </div>
-
+      <div class="main-form__inner">
         <fieldset class="main-form__fieldset">
-          <legend class="main-form__fieldset-title">Контактные данные (владельца кота)</legend>
+          <legend class="visually-hidden">Основная информация (о коте)</legend>
 
           <ul class="main-form__list">
-            <div class="main-form__inner">
-              <li class="main-form__item main-form__item--reversed">
-                <input class="main-form__input" type="email" name="owner-email" id="owner-email" required>
-                <label class="main-form__label" for="owner-email">E-mail:*</label>
-              </li>
-
-              <li class="main-form__item main-form__item--reversed">
-                <input class="main-form__input" type="tel" name="owner-tel" id="owner-tel" required>
-                <label class="main-form__label" for="owner-tel">Телефон:*</label>
-              </li>
-            </div>
-          </ul>
-        </fieldset>
-
-        <fieldset class="main-form__fieldset">
-          <legend class="main-form__fieldset-title">Комментарий</legend>
-
-          <textarea class="main-form__input main-form__input--textarea" name="cat-behaviour"
-            placeholder="Расскажите обо всех повадках кота"></textarea>
-        </fieldset>
-
-        <fieldset class="main-form__fieldset">
-          <legend class="main-form__fieldset-title">Дополнительно</legend>
-
-          <ul class="main-form__list main-form__list--extra">
-            <li class="main-form__item">
-              <input class="main-form__input" type="checkbox" name="sweetener" id="sweetener" checked>
-              <label class="main-form__label main-form__label--darkest" for="sweetener">Сахарозаменитель</label>
+            <li class="main-form__item main-form__item--reversed">
+              <input class="main-form__input" type="text" name="cat-name" id="cat-name" required>
+              <label class="main-form__label" for="cat-name">Имя:*</label>
             </li>
 
-            <li class="main-form__item">
-              <input class="main-form__input" type="checkbox" name="water" id="water">
-              <label class="main-form__label main-form__label--darkest" for="water">Питьевая вода</label>
+            <li class="main-form__item main-form__item--reversed">
+              <input class="main-form__input" type="number" name="cat-weight" id="cat-weight" required>
+              <label class="main-form__label" for="cat-weight">Вес (кг):*</label>
             </li>
 
-            <li class="main-form__item">
-              <input class="main-form__input" type="checkbox" name="milk" id="milk">
-              <label class="main-form__label main-form__label--darkest" for="milk">Молоко</label>
-            </li>
-
-            <li class="main-form__item">
-              <input class="main-form__input" type="checkbox" name="vitamins" id="vitamins">
-              <label class="main-form__label main-form__label--darkest" for="vitamins">Витамины</label>
+            <li class="main-form__item main-form__item--reversed">
+              <input class="main-form__input" type="number" name="cat-age" id="cat-age">
+              <label class="main-form__label" for="cat-age">Возраст (лет):</label>
             </li>
           </ul>
         </fieldset>
 
-        <div class="main-form__footer">
-          <button class="button button__main main-form__button" type="submit">Отправить заявку</button>
+        <fieldset class="main-form__fieldset main-form__fieldset--border">
+          <legend class="visually-hidden">Цель</legend>
 
-          <p class="main-form__tip text">* — Обязательные поля</p>
-        </div>
-      </form>
-    </div>
+          <ul class="main-form__list">
+            <li class="main-form__item">
+              <input class="main-form__input visually-hidden" type="radio" name="weight" value="lose-weight"
+                id="lose-weight" checked>
+              <label class="main-form__label main-form__label--darken" for="lose-weight">Похудение</label>
+            </li>
+
+            <li class="main-form__item">
+              <input class="main-form__input visually-hidden" type="radio" name="weight" value="weight-gain"
+                id="weight-gain">
+              <label class="main-form__label main-form__label--darken" for="weight-gain">Набор массы</label>
+            </li>
+
+            <li class="main-form__item">
+              <input class="main-form__input visually-hidden" type="radio" name="weight" value="consult" id="consult">
+              <label class="main-form__label main-form__label--darken" for="consult">Не знаю (нужен ваш совет)</label>
+            </li>
+          </ul>
+        </fieldset>
+      </div>
+
+      <fieldset class="main-form__fieldset">
+        <legend class="main-form__fieldset-title main-form__fieldset-title--contacts">Контактные данные (владельца кота)
+        </legend>
+
+        <ul class="main-form__list">
+          <div class="main-form__inner">
+            <li class="main-form__item main-form__item--reversed">
+              <input class="main-form__input" type="email" name="owner-email" id="owner-email" required>
+              <label class="main-form__label" for="owner-email">E-mail:*</label>
+              <span class="main-form__mail">
+                <span class="visually-hidden">Почта</span>
+                <svg width="19" height="14" viewBox="0 0 19 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <line x1="1.18955" y1="6" x2="1.18955" y2="14" stroke="#222222" stroke-width="1.3" />
+                  <line x1="18.1896" y1="6" x2="18.1896" y2="14" stroke="#222222" stroke-width="1.3" />
+                  <line x1="0.539551" y1="13.35" x2="18.5396" y2="13.35" stroke="#222222" stroke-width="1.3" />
+                  <line x1="0.539551" y1="1.35" x2="18.5396" y2="1.35" stroke="#222222" stroke-width="1.3" />
+                  <path
+                    d="M17.8896 3.1821L9.53957 9.67654L1.18955 3.18209V1.65H4.03955L9.53957 1.65H14.5396H17.8896V3.1821Z"
+                    stroke="#222222" stroke-width="1.3" />
+                </svg>
+              </span>
+            </li>
+
+            <li class="main-form__item main-form__item--reversed">
+              <input class="main-form__input" type="tel" name="owner-tel" id="owner-tel" required>
+              <label class="main-form__label" for="owner-tel">Телефон:*</label>
+              <span class="main-form__phone">
+                <span class="visually-hidden">Телефон</span>
+                <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <g clip-path="url(#clip0)">
+                    <path
+                      d="M17.7561 9.4H9.61816V10.6H17.7561L15.7455 12.7L16.6072 13.6L19.5752 10.5C19.6684 10.3702 19.7188 10.2123 19.7188 10.05C19.7188 9.88772 19.6684 9.72982 19.5752 9.6L16.6072 6.5L15.7455 7.4L17.7561 9.4Z"
+                      fill="black" />
+                    <path
+                      d="M8.37362 19.4V13.2C8.36256 13.0447 8.29849 12.8987 8.19306 12.7886C8.08763 12.6785 7.94786 12.6116 7.79917 12.6H3.5866C3.59153 12.9167 3.71415 13.2189 3.92855 13.4428C4.14295 13.6668 4.43232 13.7949 4.73548 13.8H7.12899V18.8H3.5866C3.35992 18.8149 3.13268 18.7825 2.91809 18.7048C2.70349 18.6271 2.50582 18.5057 2.33656 18.3475C2.1673 18.1893 2.02983 17.9976 1.93215 17.7834C1.83446 17.5693 1.7785 17.337 1.76753 17.1V3.10001C1.75968 2.6373 1.92564 2.18977 2.22987 1.85331C2.5341 1.51686 2.95238 1.31824 3.39512 1.30001H7.12899V6.30001H4.83122C4.52806 6.30516 4.23869 6.43324 4.02429 6.65718C3.80989 6.88112 3.68727 7.18336 3.68234 7.50001H7.89491C8.0436 7.48846 8.18337 7.42154 8.2888 7.31142C8.39423 7.2013 8.4583 7.05531 8.46936 6.90001V0.600012C8.42369 0.443872 8.33642 0.304534 8.21775 0.198285C8.09907 0.0920352 7.95389 0.0232649 7.79917 1.23734e-05H3.5866C3.20936 -0.0133408 2.8333 0.0511002 2.47993 0.189651C2.12655 0.328202 1.80279 0.538145 1.52714 0.807477C1.2515 1.07681 1.02939 1.40025 0.8735 1.7593C0.717613 2.11835 0.631012 2.50598 0.618647 2.90001V16.8C0.590902 17.1977 0.642233 17.597 0.769411 17.9729C0.89659 18.3489 1.09686 18.6932 1.35764 18.9844C1.61841 19.2756 1.93405 19.5072 2.28469 19.6648C2.63534 19.8224 3.0134 19.9024 3.39512 19.9H7.79917C7.86953 19.915 7.94222 19.9133 8.01186 19.895C8.0815 19.8767 8.1463 19.8423 8.20147 19.7942C8.25664 19.7462 8.30075 19.6859 8.33055 19.6176C8.36035 19.5494 8.37507 19.475 8.37362 19.4Z"
+                      fill="black" />
+                  </g>
+                  <defs>
+                    <clipPath id="clip0">
+                      <rect width="19.1481" height="20" fill="white" transform="translate(0.618652)" />
+                    </clipPath>
+                  </defs>
+                </svg>
+              </span>
+            </li>
+          </div>
+        </ul>
+      </fieldset>
+
+      <fieldset class="main-form__fieldset">
+        <legend class="main-form__fieldset-title main-form__fieldset-title--comment">Комментарий</legend>
+
+        <textarea class="main-form__input main-form__input--textarea" name="cat-behaviour"
+          placeholder="Расскажите обо всех повадках кота"></textarea>
+      </fieldset>
+
+      <fieldset class="main-form__fieldset">
+        <legend class="main-form__fieldset-title main-form__fieldset-title--extra">Дополнительно</legend>
+
+        <ul class="main-form__list main-form__list--extra">
+          <li class="main-form__item">
+            <input class="main-form__input visually-hidden" type="checkbox" name="sweetener" id="sweetener" checked>
+            <label class="main-form__label main-form__label--darkest" for="sweetener">Сахарозаменитель</label>
+          </li>
+
+          <li class="main-form__item">
+            <input class="main-form__input visually-hidden" type="checkbox" name="water" id="water">
+            <label class="main-form__label main-form__label--darkest" for="water">Питьевая вода</label>
+          </li>
+
+          <li class="main-form__item">
+            <input class="main-form__input visually-hidden" type="checkbox" name="milk" id="milk">
+            <label class="main-form__label main-form__label--darkest" for="milk">Молоко</label>
+          </li>
+
+          <li class="main-form__item">
+            <input class="main-form__input visually-hidden" type="checkbox" name="vitamins" id="vitamins">
+            <label class="main-form__label main-form__label--darkest" for="vitamins">Витамины</label>
+          </li>
+        </ul>
+      </fieldset>
+
+      <div class="main-form__footer">
+        <button class="button button__main main-form__button" type="submit">Отправить заявку</button>
+
+        <p class="main-form__tip text">* — Обязательные поля</p>
+      </div>
+    </form>
   </main>
 
   <footer class="page-footer">
-    <section class="location">
+    <section class="location location--inner">
       <div class="location__wrapper">
         <h2 class="visually-hidden">Как нас найти</h2>
 
         <div class="location__content-wrapper">
-          <h3 class="heading heading--min location__title">Приглашаем к сотрудничеству дилеров!</h3>
-          <p class="text location__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+          <h3 class="heading heading--min location__title">Приглашаем<br> к сотрудничеству<br> дилеров!</h3>
+          <p class="text location__text">ул. Большая<br> Конюшенная, д. 19/8<br> <span
+              class="location__text-space">Санкт-Петербург</span></p>
         </div>
       </div>
 
@@ -232,6 +266,8 @@
       </section>
     </div>
   </footer>
+
+  <script src="js/toggle.js"></script>
 </body>
 
 </html>
