--- a/source/catalog.html
+++ b/source/catalog.html
@@ -6,13 +6,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Каталог</title>
   <link href="css/style.css" rel="stylesheet">
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="img/favicons/icon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="img/favicons/apple.png">
+  <link rel="manifest" href="manifest.webmanifest">
 </head>
 
 <body class="page__body">
   <header class="page-header page-header--border">
     <div class="page-header__main-wrapper">
       <a href="index.html" class="page-header__logo page-header__logo-icon">
-        <img src="img/logo/logo-mobile.svg" width="33" height="38" alt="Логотип Cat Energy">
+        <picture>
+          <source media="(min-width: 1440px)" srcset="img/logo/logo-desktop.svg">
+          <source media="(min-width: 768px)" srcset="img/logo/logo-tablet.svg">
+          <img class="page-header__logo-image" src="img/logo/logo-mobile.svg" width="33" height="38"
+            alt="Логотип Cat Energy">
+        </picture>
       </a>
 
       <a href="index.html" class="page-header__logo page-header__logo-title">
@@ -27,13 +36,13 @@
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
             <li class="site-list__item">
-              <a href="index.html" class="site-list__link site-list__link--first">Главная</a>
+              <a href="index.html" class="site-list__link site-list__link--first site-list__link--inner">Главная</a>
             </li>
             <li class="site-list__item site-list__item--active">
-              <a class="site-list__link site-list__link--actual">Каталог продукции</a>
+              <a class="site-list__link site-list__link--actual site-list__link--inner">Каталог продукции</a>
             </li>
             <li class="site-list__item">
-              <a href="form.html" class="site-list__link">Подбор программы</a>
+              <a href="form.html" class="site-list__link site-list__link--inner">Подбор программы</a>
             </li>
           </ul>
         </div>
@@ -52,8 +61,13 @@
           <li class="catalog__item" id="catalog-pro">
             <a href="#" class="catalog__item-text">Cat Energy Pro 500 г</a>
             <a href="#" class="catalog__item-image">
-              <img src="img/catalog/cat-energy-pro-chicken-500.png" width="68" height="86"
-                alt="Оранжевая упаковка Cat Energy PRO со вкусом курицы на 500г">
+              <picture>
+                <source media="(min-width: 768px)"
+                  srcset="img/catalog/tablet/cat-energy-pro-chicken-500-tablet.png 1x, img/catalog/tablet/cat-energy-pro-chicken-500-tablet@2x.png 2x">
+                <img class="catalog__item-picture" src="img/catalog/cat-energy-pro-chicken-500.png" width="68"
+                  height="86" srcset="img/catalog/cat-energy-pro-chicken-500@2x.png 2x"
+                  alt="Оранжевая упаковка Cat Energy PRO со вкусом курицы на 500г">
+              </picture>
             </a>
             <table class="catalog__item-table">
               <tr class="catalog__item-table-row">
@@ -74,9 +88,14 @@
 
           <li class="catalog__item">
             <a href="#" class="catalog__item-text">Cat Energy Pro 1000 г</a>
-            <a href="#" class="catalog__item-image">
-              <img src="img/catalog/cat-energy-pro-chicken-1000.png" width="84" height="100"
-                alt="Оранжевая упаковка Cat Energy PRO со вкусом курицы на 1000г">
+            <a href="#" class="catalog__item-image catalog__item-image--large">
+              <picture>
+                <source media="(min-width: 768px)"
+                  srcset="img/catalog/tablet/cat-energy-pro-chicken-1000-tablet.png 1x, img/catalog/tablet/cat-energy-pro-chicken-1000-tablet@2x.png 2x">
+                <img class="catalog__item-picture" src="img/catalog/cat-energy-pro-chicken-1000.png" width="84"
+                  height="100" srcset="img/catalog/cat-energy-pro-chicken-1000@2x.png 2x"
+                  alt="Оранжевая упаковка Cat Energy PRO со вкусом курицы на 1000г">
+              </picture>
             </a>
             <table class="catalog__item-table">
               <tr class="catalog__item-table-row">
@@ -98,8 +117,13 @@
           <li class="catalog__item">
             <a href="#" class="catalog__item-text">Cat Energy Pro 500 г</a>
             <a href="#" class="catalog__item-image">
-              <img src="img/catalog/cat-energy-pro-fish-500.png" width="68" height="78"
-                alt="Зелёная упаковка Cat Energy PRO со вкусом рыбы на 500г">
+              <picture>
+                <source media="(min-width: 768px)"
+                  srcset="img/catalog/tablet/cat-energy-pro-fish-500-tablet.png 1x, img/catalog/tablet/cat-energy-pro-fish-500-tablet@2x.png 2x">
+                <img class="catalog__item-picture" src="img/catalog/cat-energy-pro-fish-500.png" width="68" height="78"
+                  srcset="img/catalog/cat-energy-pro-fish-500@2x.png 2x"
+                  alt="Зелёная упаковка Cat Energy PRO со вкусом рыбы на 500г">
+              </picture>
             </a>
             <table class="catalog__item-table">
               <tr class="catalog__item-table-row">
@@ -121,8 +145,13 @@
           <li class="catalog__item">
             <a href="#" class="catalog__item-text">Cat Energy Pro 1000 г</a>
             <a href="#" class="catalog__item-image">
-              <img src="img/catalog/cat-energy-pro-fish-1000.png" width="84" height="100"
-                alt="Зелёная упаковка Cat Energy PRO со вкусом рыбы на 1000г">
+              <picture>
+                <source media="(min-width: 768px)"
+                  srcset="img/catalog/tablet/cat-energy-pro-fish-1000-tablet.png 1x, img/catalog/tablet/cat-energy-pro-fish-1000-tablet@2x.png 2x">
+                <img class="catalog__item-picture" src="img/catalog/cat-energy-pro-fish-1000.png" width="84"
+                  height="100" srcset="img/catalog/cat-energy-pro-fish-1000@2x.png 2x"
+                  alt="Зелёная упаковка Cat Energy PRO со вкусом рыбы на 1000г">
+              </picture>
             </a>
             <table class="catalog__item-table">
               <tr class="catalog__item-table-row">
@@ -144,8 +173,13 @@
           <li class="catalog__item" id="catalog-slim">
             <a href="#" class="catalog__item-text">Cat Energy Slim 500 г</a>
             <a href="#" class="catalog__item-image">
-              <img src="img/catalog/cat-energy-slim-buckwheat-500.png" width="68" height="78"
-                alt="Синяя упаковка Cat Energy SLIM со вкусом гречки на 500г">
+              <picture>
+                <source media="(min-width: 768px)"
+                  srcset="img/catalog/tablet/cat-energy-slim-buckwheat-500-tablet.png 1x, img/catalog/tablet/cat-energy-slim-buckwheat-500-tablet@2x.png 2x">
+                <img class="catalog__item-picture" src="img/catalog/cat-energy-slim-buckwheat-500.png" width="68"
+                  height="78" srcset="img/catalog/cat-energy-slim-buckwheat-500@2x.png 2x"
+                  alt="Синяя упаковка Cat Energy SLIM со вкусом гречки на 500г">
+              </picture>
             </a>
             <table class="catalog__item-table">
               <tr class="catalog__item-table-row">
@@ -167,8 +201,13 @@
           <li class="catalog__item">
             <a href="#" class="catalog__item-text">Cat Energy Slim 1000 г</a>
             <a href="#" class="catalog__item-image">
-              <img src="img/catalog/cat-energy-slim-buckwheat-1000.png" width="84" height="100"
-                alt="Синяя упаковка Cat Energy SLIM со вкусом гречки на 1000г">
+              <picture>
+                <source media="(min-width: 768px)"
+                  srcset="img/catalog/tablet/cat-energy-slim-buckwheat-1000-tablet.png 1x, img/catalog/tablet/cat-energy-slim-buckwheat-1000-tablet@2x.png 2x">
+                <img class="catalog__item-picture" src="img/catalog/cat-energy-slim-buckwheat-1000.png" width="84"
+                  height="100" srcset="img/catalog/cat-energy-slim-buckwheat-1000@2x.png 2x"
+                  alt="Синяя упаковка Cat Energy SLIM со вкусом гречки на 1000г">
+              </picture>
             </a>
             <table class="catalog__item-table">
               <tr class="catalog__item-table-row">
@@ -190,8 +229,13 @@
           <li class="catalog__item">
             <a href="#" class="catalog__item-text">Cat Energy Slim 500 г</a>
             <a href="#" class="catalog__item-image">
-              <img src="img/catalog/cat-energy-slim-rice-500.png" width="72" height="84"
-                alt="Фиолетовая упаковка Cat Energy SLIM со вкусом риса на 500г">
+              <picture>
+                <source media="(min-width: 768px)"
+                  srcset="img/catalog/tablet/cat-energy-slim-rice-500-tablet.png 1x, img/catalog/tablet/cat-energy-slim-rice-500-tablet@2x.png 2x">
+                <img class="catalog__item-picture" src="img/catalog/cat-energy-slim-rice-500.png" width="72" height="84"
+                  srcset="img/catalog/cat-energy-slim-rice-500@2x.png 2x"
+                  alt="Фиолетовая упаковка Cat Energy SLIM со вкусом риса на 500г">
+              </picture>
             </a>
             <table class="catalog__item-table">
               <tr class="catalog__item-table-row">
@@ -269,7 +313,8 @@
 
         <div class="location__content-wrapper">
           <h3 class="heading heading--min location__title">Приглашаем<br> к сотрудничеству<br> дилеров!</h3>
-          <p class="text location__text">ул. Большая<br> Конюшенная, д. 19/8<br> <span class="location__text-space">Санкт-Петербург</span></p>
+          <p class="text location__text">ул. Большая<br> Конюшенная, д. 19/8<br> <span
+              class="location__text-space">Санкт-Петербург</span></p>
         </div>
       </div>
 
