Завершил автоматизацию сборки проекта

--- a/source/form.html
+++ b/source/form.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Подбор программы</title>
-  <link href="css/style.css" rel="stylesheet">
+  <link href="css/style.min.css" rel="stylesheet">
   <link rel="icon" href="favicon.ico">
   <link rel="icon" href="img/favicons/icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="img/favicons/apple.png">
@@ -249,7 +249,7 @@
     </div>
   </footer>
 
-  <script src="js/toggle.js"></script>
+  <script src="js/toggle.min.js"></script>
 </body>
 
 </html>
