--- a/source/catalog.html
+++ b/source/catalog.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Каталог</title>
-  <link href="css/style.css" rel="stylesheet">
+  <link href="css/style.min.css" rel="stylesheet">
   <link rel="icon" href="favicon.ico">
   <link rel="icon" href="img/favicons/icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="img/favicons/apple.png">
@@ -62,6 +62,10 @@
             <a href="#" class="catalog__item-text">Cat Energy Pro 500 г</a>
             <a href="#" class="catalog__item-image">
               <picture>
+                <source type="image/webp" media="(min-width: 768px)"
+                  srcset="img/catalog/tablet/cat-energy-pro-chicken-500-tablet.webp 1x, img/catalog/cat-energy-pro-chicken-500-tablet@2x.webp 2x">
+                <source type="image/webp"
+                  srcset="img/catalog/cat-energy-pro-chicken-500.webp 1x, img/catalog/cat-energy-pro-chicken-500@2x.webp 2x">
                 <source media="(min-width: 768px)"
                   srcset="img/catalog/tablet/cat-energy-pro-chicken-500-tablet.png 1x, img/catalog/tablet/cat-energy-pro-chicken-500-tablet@2x.png 2x">
                 <img class="catalog__item-picture" src="img/catalog/cat-energy-pro-chicken-500.png" width="68"
@@ -90,6 +94,10 @@
             <a href="#" class="catalog__item-text">Cat Energy Pro 1000 г</a>
             <a href="#" class="catalog__item-image catalog__item-image--large">
               <picture>
+                <source type="image/webp" media="(min-width: 768px)"
+                  srcset="img/catalog/tablet/cat-energy-pro-chicken-1000-tablet.webp 1x, img/catalog/cat-energy-pro-chicken-1000-tablet@2x.webp 2x">
+                <source type="image/webp"
+                  srcset="img/catalog/cat-energy-pro-chicken-1000.webp 1x, img/catalog/cat-energy-pro-chicken-1000@2x.webp 2x">
                 <source media="(min-width: 768px)"
                   srcset="img/catalog/tablet/cat-energy-pro-chicken-1000-tablet.png 1x, img/catalog/tablet/cat-energy-pro-chicken-1000-tablet@2x.png 2x">
                 <img class="catalog__item-picture" src="img/catalog/cat-energy-pro-chicken-1000.png" width="84"
@@ -118,6 +126,10 @@
             <a href="#" class="catalog__item-text">Cat Energy Pro 500 г</a>
             <a href="#" class="catalog__item-image">
               <picture>
+                <source type="image/webp" media="(min-width: 768px)"
+                  srcset="img/catalog/tablet/cat-energy-pro-fish-500-tablet.webp 1x, img/catalog/cat-energy-pro-fish-500-tablet@2x.webp 2x">
+                <source type="image/webp"
+                  srcset="img/catalog/cat-energy-pro-fish-500.webp 1x, img/catalog/cat-energy-pro-fish-500@2x.webp 2x">
                 <source media="(min-width: 768px)"
                   srcset="img/catalog/tablet/cat-energy-pro-fish-500-tablet.png 1x, img/catalog/tablet/cat-energy-pro-fish-500-tablet@2x.png 2x">
                 <img class="catalog__item-picture" src="img/catalog/cat-energy-pro-fish-500.png" width="68" height="78"
@@ -146,6 +158,10 @@
             <a href="#" class="catalog__item-text">Cat Energy Pro 1000 г</a>
             <a href="#" class="catalog__item-image">
               <picture>
+                <source type="image/webp" media="(min-width: 768px)"
+                  srcset="img/catalog/tablet/cat-energy-pro-fish-1000-tablet.webp 1x, img/catalog/cat-energy-pro-fish-1000-tablet@2x.webp 2x">
+                <source type="image/webp"
+                  srcset="img/catalog/cat-energy-pro-fish-1000.webp 1x, img/catalog/cat-energy-pro-fish-1000@2x.webp 2x">
                 <source media="(min-width: 768px)"
                   srcset="img/catalog/tablet/cat-energy-pro-fish-1000-tablet.png 1x, img/catalog/tablet/cat-energy-pro-fish-1000-tablet@2x.png 2x">
                 <img class="catalog__item-picture" src="img/catalog/cat-energy-pro-fish-1000.png" width="84"
@@ -174,6 +190,10 @@
             <a href="#" class="catalog__item-text">Cat Energy Slim 500 г</a>
             <a href="#" class="catalog__item-image">
               <picture>
+                <source type="image/webp" media="(min-width: 768px)"
+                  srcset="img/catalog/tablet/cat-energy-slim-buckwheat-500-tablet.webp 1x, img/catalog/cat-energy-slim-buckwheat-500-tablet@2x.webp 2x">
+                <source type="image/webp"
+                  srcset="img/catalog/cat-energy-slim-buckwheat-500.webp 1x, img/catalog/cat-energy-slim-buckwheat-500@2x.webp 2x">
                 <source media="(min-width: 768px)"
                   srcset="img/catalog/tablet/cat-energy-slim-buckwheat-500-tablet.png 1x, img/catalog/tablet/cat-energy-slim-buckwheat-500-tablet@2x.png 2x">
                 <img class="catalog__item-picture" src="img/catalog/cat-energy-slim-buckwheat-500.png" width="68"
@@ -202,6 +222,10 @@
             <a href="#" class="catalog__item-text">Cat Energy Slim 1000 г</a>
             <a href="#" class="catalog__item-image">
               <picture>
+                <source type="image/webp" media="(min-width: 768px)"
+                  srcset="img/catalog/tablet/cat-energy-slim-buckwheat-1000-tablet.webp 1x, img/catalog/cat-energy-slim-buckwheat-1000-tablet@2x.webp 2x">
+                <source type="image/webp"
+                  srcset="img/catalog/cat-energy-slim-buckwheat-1000.webp 1x, img/catalog/cat-energy-slim-buckwheat-1000@2x.webp 2x">
                 <source media="(min-width: 768px)"
                   srcset="img/catalog/tablet/cat-energy-slim-buckwheat-1000-tablet.png 1x, img/catalog/tablet/cat-energy-slim-buckwheat-1000-tablet@2x.png 2x">
                 <img class="catalog__item-picture" src="img/catalog/cat-energy-slim-buckwheat-1000.png" width="84"
@@ -230,6 +254,10 @@
             <a href="#" class="catalog__item-text">Cat Energy Slim 500 г</a>
             <a href="#" class="catalog__item-image">
               <picture>
+                <source type="image/webp" media="(min-width: 768px)"
+                  srcset="img/catalog/tablet/cat-energy-slim-rice-500-tablet.webp 1x, img/catalog/cat-energy-slim-rice-500-tablet@2x.webp 2x">
+                <source type="image/webp"
+                  srcset="img/catalog/cat-energy-slim-rice-500.webp 1x, img/catalog/cat-energy-slim-rice-500@2x.webp 2x">
                 <source media="(min-width: 768px)"
                   srcset="img/catalog/tablet/cat-energy-slim-rice-500-tablet.png 1x, img/catalog/tablet/cat-energy-slim-rice-500-tablet@2x.png 2x">
                 <img class="catalog__item-picture" src="img/catalog/cat-energy-slim-rice-500.png" width="72" height="84"
@@ -378,7 +406,7 @@
     </div>
   </footer>
 
-  <script src="js/toggle.js"></script>
+  <script src="js/toggle.min.js"></script>
 </body>
 
 </html>
