Улучшил скорость загрузки шрифтов

--- a/source/index.html
+++ b/source/index.html
@@ -10,6 +10,7 @@
   <link rel="icon" href="img/favicons/icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="img/favicons/apple.png">
   <link rel="manifest" href="manifest.webmanifest">
+  <link rel="preload" href="fonts/oswaldregular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 </head>
 
 <body class="page__body">
@@ -182,11 +183,11 @@
                 class="example__difference-image-wrapper example__difference-image-wrapper--after example__difference-image-wrapper--hidden">
                 <picture>
                   <source type="image/webp" media="(min-width: 1440px)"
-                    srcset="img/example/example-desktop.webp 1x, img/example/webp/example-desktop@2x.webp 2x">
+                    srcset="img/example/example-desktop.webp 1x, img/example/example-desktop@2x.webp 2x">
                   <source type="image/webp" media="(min-width: 768px)"
-                    srcset="img/example/example-tablet.webp 1x, img/example/webp/example-tablet@2x.webp 2x">
+                    srcset="img/example/example-tablet.webp 1x, img/example/example-tablet@2x.webp 2x">
                   <source type="image/webp"
-                    srcset="img/example/example-after-mobile.webp 1x, img/example/webp/example-after-mobile@2x.webp 2x">
+                    srcset="img/example/example-after-mobile.webp 1x, img/example/example-after-mobile@2x.webp 2x">
                   <source media="(min-width: 1440px)"
                     srcset="img/example/example-desktop.png 1x, img/example/example-desktop@2x.png 2x">
                   <source media="(min-width: 768px)"
